assets/stylesheets/rooms.scss
@import "colors";
@import "sizes";
@import "fonts";

.rooms {
  width: auto;
  overflow: hidden;
  height: 100%;
  color: $text_grey;

  .room-list-page {
    height: 100%;

    .row {
      margin: 0;
      overflow: scroll;
    }

    .topic-header {
      height: calc(#{$topic_height} + #{$rooms_tab_height});
      background-color: $chat_background_red;
      border-bottom: 31px solid $tab_background_red;

      .room-prefix {
        color: white;
        font-family: $room_header_room_font;
        font-size: 12pt;
        margin-left: 22px;
        margin-top: 10px;
      }

      .current-topic {
        color: white;
        font-size: 24pt;
        margin-left: 20px;
        margin-top: -5px;
        font-family: $room_header_name_font;

        &:hover {
          border: none;
          text-decoration: none;
        }
      }
    }

    .rooms-list-container {

      width: 100%;
      height: calc(100% - #{$topic_height} - #{$rooms_tab_height});

      .rooms-list {
        height: 100%;
        background-color: white;
        border-right: 1px solid lightgray;

        .tab-content {
          position: relative;
        }

        >div{
          >nav{
            position: fixed;
            left: 200px;
            z-index: 1;
            top: calc(#{$topic_height} + #{$header_height} + 2px);
            height: initial;
            overflow: hidden;
          }
        }

        .nav-tabs {
          background-color: $tab_background_red;
          border-bottom: none;

          li {
            border-radius: 10px 10px 0px 0px;
            margin-left: 2px;
            background: transparent;

            a {
              color: white;
              padding: 5px 15px;
              font-family: $room_header_name_font;
              font-size: 12pt;
              opacity: .5;
            }

            &.active {
              font-weight: bold;
              color: white;

              a {
                opacity: 1;
                color: inherit;
              }
            }
          }
        }
        /* Bootstrap override */
        .nav-tabs > li.active > a,
        .nav-tabs > li.active > a:hover,
        .nav-tabs > li.active > a:focus {
          background-color: transparent;
          border: none;
        }
        .nav-tabs > li > a {
          border: none;
        }
        .nav > li > a:hover, .nav > li > a:focus {
          background-color: transparent;
        }
        /* End Bootstrap override */


        .room-info {
          overflow: hidden;
          background-color: $thread_inactive_background;
          font-family: $room_info_font;

          &.highlight-room {
            background-color: $thread_active_background;
          }

          &.list-group-item {
            border: inherit;
            border-bottom: 1px solid lightgray;
            margin-bottom: inherit;
          }

          a {
            color: inherit;
          }

          .answers {
            float: left;
            width: 75px;
            text-align: center;
            color: $answers_dark_grey;
            margin-right: 40px;
            padding: 5px 10px;

            .answer-total {
              font-weight: bold;
              font-size: 32px;
            }
          }

          .question-info {
            float: left;

            .topic-title {
              color: $questions_purple;
              font-weight: bold;
            }

            .question-header {
              margin-bottom: 5px;
            }

            .question-title {
              font-size: 16px;
              padding-right: 10px;
              font-weight: 500;
              color: $devils_grey;
              margin-top: 5px;
            }
            .question-text {
              font-size: 15px;
              font-weight: 200;
              color: $devils_grey;
              margin-top: 10px;
            }
          }

          .time-asked {
            font-size: 12px;
            padding-top: 8px;
          }

          .room-user-image {
            width: 50px;
            padding: 5px;
            margin-top: 10px;
          }
        }
      }
    }
  }
}

#news-feed {
  width: 100%;
  float: none;

  .rooms-list {
    position: absolute;
    top: 120px;
    left: 0;
    right: 0;
    bottom: 0;
    overflow-y: scroll;
    padding-bottom: 120px;
  }

  .topic-header {
    height: calc(60px + #{$rooms_tab_height});
    background-color: $chat_background_red;
    font-size: 27px;
    padding-top: 28px;
    padding-left: 10px;
    color: white;
    .current-topic {
      font-size: 27px;
      margin: 15px 0px 0px 20px;
      text-transform: lowercase;
    }
    .home-header {
      font-size: 30px;
      text-align: center;
      border: 2px solid white;
      width: 30%;
      margin: auto;
      padding: 8px 5px 12px 5px;
      margin-top: -10px;
      border-radius: 15px;
      cursor: pointer;
      color: white;
      &:hover {
        text-decoration: none;
      }
    }
  }

  .nav-tabs {
    background-color: $tab_background_red;
    border-bottom: none;

    li {
      border-radius: 10px 10px 0px 0px;
      margin-left: 2px;
      background: transparent;

      a {
        color: white;
        padding: 5px 15px;
        font-family: $room_header_name_font;
        font-size: 12pt;
        opacity: .5;
      }

      &.active {
        font-weight: bold;
        color: white;

        a {
          opacity: 1;
          color: inherit;
        }
      }
    }
  }
  /* Bootstrap override */
  .nav-tabs > li.active > a,
  .nav-tabs > li.active > a:hover,
  .nav-tabs > li.active > a:focus {
    background-color: transparent;
    border: none;
  }
  .nav-tabs > li > a {
    border: none;
  }
  .nav > li > a:hover, .nav > li > a:focus {
    background-color: transparent;
  }
}

